traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:10: error: not found: value str
    ecritMessage(str(cpt))
                 ^